fix: 🐛 add nowrap to .citizen-body-header--sticky .firstHeading

--- a/resources/skins.citizen.styles/StickyHeader.less
+++ b/resources/skins.citizen.styles/StickyHeader.less
@@ -52,6 +52,7 @@
 		overflow: hidden;
 		font-size: var( --font-size-h3 );
 		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 
 	.citizen-jumptotop {
